--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.5.1",
     "aos": "^2.3.4",
+    "emailjs": "^4.0.2",
+    "emailjs-com": "^3.2.0",
     "framer-motion": "^10.12.16",
     "gh-pages": "^5.0.0",
     "nodemailer": "^6.9.3",
